--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-streamlit
+#streamlit
 streamlit-elements==0.1
 pandas
-plotly-express
+#plotly-express
 protobuf==3.13
+plotly==5.24.0
+streamlit==1.40.0
